# ArcadeGameProject

./: .gitignore  CMakeLists.txt  GDD.md  README.md  commands.txt  main.cpp
include/glad/: glad.h
resources/: sources.md
shaders/: basic.glsl  basic_fragment.glsl  basic_vertex.glsl
src/: .renderer.h.kate-swp  byt.h  collision.cpp  collision.hpp  element_buffer.cpp  element_gry.h  enemy.cpp  enemy.hpp  enemy_manager.cpp  enemy_manager.hpp  enemy_prefabricate.cpp  enemy_prefabricate.hpp  entity.cpp  entity.h  entity.hpp  environment.cpp  environment.h  environment.hpp  floor.cpp  floor.hpp  game.cpp  game.hpp  game_element.cpp  game_element.h  game_element.hpp  glad.c  gra.h  gracz.h  loot.cpp  loot.hpp  main.cpp  map.cpp  map.h  map.hpp  map_position.hpp  mapa.h  otoczenie.h  player.cpp  player.h  player.hpp  (+36 more)
src/renderer/: element_buffer.cpp  element_buffer.hpp  render_mesh.cpp  render_mesh.h  render_mesh.hpp  renderer.cpp  renderer.h  renderer.hpp  renderer_utils.cpp  renderer_utils.h  shader.cpp  shader.h  shader.hpp  texture.cpp  texture.h  texture.hpp  transform2d.cpp  transform2d.hpp  vertex_array.cpp  vertex_array.h  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer_layout.cpp  vertex_buffer_layout.h  vertex_buffer_layout.hpp
src/ui/: ui_button.cpp  ui_button.hpp  ui_debug_fps_display.cpp  ui_debug_fps_display.hpp  ui_horizontal_box.cpp  ui_horizontal_box.hpp  ui_input.cpp  ui_input.hpp  ui_main_menu.cpp  ui_main_menu.hpp  ui_manager.cpp  ui_manager.hpp  ui_player_statistics.cpp  ui_player_statistics.hpp  ui_settings.cpp  ui_settings.hpp  ui_vertical_box.cpp  ui_vertical_box.hpp  ui_window.cpp  ui_window.hpp
src/utils/: rng.hpp
